styles.css
@font-face {
    font-family: "ignorance";
    src: url(fonts/UniversalIgnorance.woff2) format("woff2"),
         url(fonts/UniversalIgnorance.woff) format("woff");
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

:root{
    box-sizing: border-box;
    color: white;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;

    --interactable_color: rgb(240, 84, 79);
    --interactable_hover_color: rgb(214, 74, 70);
    --interactable_active_color: rgb(190, 66, 62);

    --invalid_input_color: #d83131;
}

body{
    display: flex;
    align-items: stretch;
    height: 100vh;
    margin: 0;

    background-color: rgb(34, 34, 34);
}

.visual-section{
    flex: 2;
    background-image: url(images/background.jpg);
    background-position: center;
    background-size: cover;
    position: relative;
}

.logo-container{
    position: absolute;
    width: 100%;
    top: 200px;
    height: 110px;
    background-color: rgba(0, 0, 0, 0.349);
    display: flex;
    justify-content: center;
    align-items: center;
}

.logo-img{
    height: 100px;
    width: auto;
}

.logo-txt{
    font-family: "ignorance", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: clamp(3rem, 0.75rem + 4vw, 5rem);
}

.photo-credit{
    position: absolute;
    text-align: center;
    font-size: .8rem;

    left: 0;
    right: 0;
    bottom: 5px;
    padding: 2px;
}

.photo-credit a{
    color: white;
}
.photo-credit a:hover{
    color: rgb(255, 195, 195);
}
.photo-credit a:active{
    color: rgb(194, 149, 149);
}

.form-section{
    flex: 3;
    background-color: rgb(34, 34, 34);

    display: flex;
    flex-flow: column;
    justify-content: center;
}

fieldset{
    display: flex;
    flex-wrap: wrap;

    border: none;
    background-color: #E8E9EB;
    padding: 20px;
    padding-top: 50px;

    margin: 0;
    position: relative;
}

legend{
    position: absolute;
    left: 70px;
    top: 7px;

    color: black;
    font-size: 1.75rem;

    letter-spacing: .25ch;
}

.form-field{
    display: flex;
    flex-direction: column;

    flex: 1;
    flex-basis: 30%;
    margin: 15px 0;
    position: relative;
}


input{
    background-color: rgb(240, 84, 79, 0);

    border: 1px dotted #97989b;
    border-radius: 5px;

    padding: 5px;
    width: 60%;

    font-size: 1.15rem;
    order: 1;
}

input:focus{
    outline: none;
    box-shadow: 3px 3px black;
    border: 1px solid #7d89ac;
}

input:user-valid{
    border: 1px solid #6ead68;   
}

input:user-invalid{
    border: 1px solid var(--invalid_input_color); 
}

input[id$="pass"]:invalid{
    border: 1px solid var(--invalid_input_color);
}

label{
    color: black;
    font-size: .8rem;
    letter-spacing: 1px;

    padding-bottom: 3px;
    width: fit-content;
}

label:not([for$="pass"])::after{
    content: " Invalid input.";
    font-size: .7rem;
    color: var(--invalid_input_color);
    visibility: hidden;
}

input:user-invalid + label::after{
    visibility: visible;
}

label[for$="pass"]::after{
    content: " Please fill out.";
    font-size: .7rem;
    color: var(--invalid_input_color);
    visibility: hidden;
}

input:invalid + label[for$="pass"]::after{
    content: " Please fill out.";
    visibility: visible;
}

input:user-invalid + label[for$="pass"]::after{
    content: " Use between 6 and 10 characters.";
    visibility: visible;
}

::placeholder{
    color: #7d89acad;
}

.service-desc{
    margin-left: 70px;
    margin-right: 70px;
    margin-bottom: 40px;

    font-size: clamp(1rem, 0.2rem + 2vw, 1.5rem);
    line-height: 1.5;

    width: min(60ch, 70%);
}

button{
    margin: 30px 70px;
    padding: 10px 50px;

    background-color: var(--interactable_color);
    color: white;

    border: none;
    border-radius: 7px;

    font-size: 16px;
    font-weight: 600;
}

button:hover{
    background-color: var(--interactable_hover_color);
}

button:active{
    background-color: var(--interactable_active_color);
}

.log-in-opt{
    margin-left: 70px;
}

span a{
    color: var(--interactable_color);
}
span a:hover{
    color: var(--interactable_hover_color);
}
span a:active{
    color: var(--interactable_active_color);
}

